--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <title>Titulo</title>
+    <title>Videojuego desde 0 con HTML5/Javascript</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/style.css">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="300" height="300">
+    <canvas id="canvas" width="320" height="320">
 
     <script src="src/main.js"></script>
 </body>
