--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="320" height="320">
+    <div class="canvas">
+        <canvas id="background" width="320" height="320"></canvas>
+        <canvas id="foreground" width="320" height="320"></canvas>
+    </div>
 
-    <script src="src/main.js"></script>
+    <script src="src/engine.js"></script>
 </body>
 
 </html>
