--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Videojuego desde 0 con HTML5/Javascript</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles/style.css">
+
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <canvas id="foreground" width="320" height="320"></canvas>
     </div>
 
-    <script src="src/engine.js"></script>
+    <script src="./js/engine.js"></script>
 </body>
 
 </html>
