--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+</html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +16,6 @@
         <canvas id="background" width="320" height="320"></canvas>
         <canvas id="foreground" width="320" height="320"></canvas>
     </div>
-
     <script src="./js/engine.js"></script>
 </body>
 
