--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
-
+        <title>Videojuego desde 0 con HTML5/Javascript</title>
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
@@ -14,23 +13,6 @@
             <canvas id="foreground" width="320" height="320"></canvas>
         </div>
 
-        <div class="information">
-            <div>Teclas:</div>
-            <ul>
-                <li>
-                    - Flecha arriba
-                </li>
-                <li>
-                    - Flecha abajo
-                </li>
-                <li>
-                    - Flecha izquierda
-                </li>
-                <li>
-                    - Flecha derecha
-                </li>
-            </ul>
-        </div>
         <script src="./js/engine.js"></script>
     </body>
 </html>
