--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Videojuego desde 0 con HTML5/Javascript</title>
+    <meta name="Description" content="Como crear tu videojuego desde 0 en la web con HTML5 y JavaScript.">
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
